Completely un-styled un-backable operation that otherwise works!

--- a/clients/common/deuxnius/web/deuxit.html
+++ b/clients/common/deuxnius/web/deuxit.html
@@ -16,6 +16,7 @@
         console.log(aMsgWithNewline.replace("\n", "", "g"));
       }
     </script>
+    <script type="text/javascript" src="../../lawnchair/lc_prod.js"></script>
     <script type="text/javascript" src="../../requirejs/require.js"></script>
   <script>
     require(
