demo state from tuesday

--- a/clients/common/deuxnius/web/deuxit.html
+++ b/clients/common/deuxnius/web/deuxit.html
@@ -16,6 +16,10 @@
         console.log(aMsgWithNewline.replace("\n", "", "g"));
       }
     </script>
+    <style>
+      :focus {outline: none;}
+      font-family: "Lucida Grande", Trebuchet MS, Tahoma, Verdana, sans-serif;
+    </style>
     <script type="text/javascript" src="../../lawnchair/lc_prod.js"></script>
     <script type="text/javascript" src="../../requirejs/require.js"></script>
   <script>
