made sure search defocussed when toggled

--- a/design/Neue/index.html
+++ b/design/Neue/index.html
@@ -20,7 +20,7 @@
                 <li class="labels"></li>
                 <li class="inbox selected"></li>
                 <li class="compose"></li>
-                <li class="search"></li>
+                <li class="search off"></li>
             </ul>
         </nav>
     </aside>
