new wmsy needs the RequireJS text plugin

--- a/clients/common/deuxnius/web/deuxit.html
+++ b/clients/common/deuxnius/web/deuxit.html
@@ -30,6 +30,7 @@
         paths: {
           "deuxnius": "deuxnius/lib/deuxnius",
           "jstut": "narscribblus/lib/jstut",
+          "require": "requirejs/require",
           "requirejs": "requirejs/build/convert/commonjs",
           "narscribblus": "narscribblus/lib/narscribblus",
           "narscribblus-plat": "narscribblus/lib-requirejs/narscribblus-plat",
