--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -23,8 +23,7 @@
         {
           baseUrl: '../deps',
           paths: {
-            main: '../firefox/js/main',
-            Q: 'q-0.4.0.min'
+            main: '../firefox/js/main'
           }
         },
         ['main']
