--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -21,12 +21,9 @@
     <script>
       require(
         {
-          baseUrl: '../deps',
-          paths: {
-            main: '../firefox/js/main'
-          }
+          baseUrl: '../deps'
         },
-        ['main']
+        ['../firefox/js/main']
       );
     </script>
   </head>
@@ -34,31 +31,29 @@
 
     <div id="cardContainer">
       <div id="cards">
-        <div id="top" title="Deuxdrop" class="card">
+        <div data-cardid="start" title="Deuxdrop" class="card">
           <a href="#peeps">Peeps</a>
           <a href="#compose">Compose</a>
           <a href="#">Pinned Peeps</a>
           <a href="#">Pinned Conversations</a>
         </div>
-        <div id="peeps" title="Peeps" class="card" data-childclass="personLink">
+        <div data-cardid="peeps" title="Peeps" class="card" data-childclass="personLink">
         </div>
-        <div id="peep" class="card">
-          <div id="peepInfo">
-            <img id="peepInfoPic" data-bind="pic" data-attr="src" src="i/face2.png">
-            <span data-bind="name" id="peepInfoName">David</span>
+        <div data-cardid="peep" class="card">
+          <div class="peepInfo">
+            <img class="peepInfoPic" data-bind="pic" data-attr="src" src="i/face2.png">
+            <span data-bind="name" class="peepInfoName">David</span>
           </div>
           <form data-class="compose"></form>
-          <div id="peepConversations" data-childclass="convListItem">
-            <a href="#conversation">Hello</a>
-            <a href="#conversation">Hi</a>
+          <div class="peepConversations" data-childclass="convListItem">
           </div>
         </div>
-        <div id="conversation" title="Conversation" class="card">
+        <div data-cardid="conversation" title="Conversation" class="card">
           <form data-class="compose"></form>
-          <ul id="conversationMessages" class="messages" data-childclass="message">
+          <ul class="conversationMessages" data-childclass="message">
           </ul>
         </div>
-        <div id="compose" title="Compose" class="card">
+        <div data-cardid="compose" title="Compose" class="card">
           <form data-class="compose"></form>
         </div>
       </div>
