--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Deuxdrop</title>
     <link rel="stylesheet" type="text/css" href="style.css">
