--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -76,7 +76,7 @@
       <form data-classimpl="compose" class="compose">
         <input type="hidden" name="from" value="">
         <input type="hidden" name="to" value="">
-        <textarea name="message"></textarea>
+        <textarea name="text"></textarea>
         <button>Send</button>
       </form>
 
