Have plumbing now for a conversation back and forth.

--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -76,6 +76,7 @@
       <form data-classimpl="compose" class="compose">
         <input type="hidden" name="from" value="">
         <input type="hidden" name="to" value="">
+        <input type="hidden" name="convId" value="">
         <textarea name="text"></textarea>
         <button>Send</button>
       </form>
