Notification is in, goes back to start, there is a link to the new conversation in the start card.

--- a/clients/deps/cardsHeader.html
+++ b/clients/deps/cardsHeader.html
@@ -5,4 +5,5 @@
         <div class="mblArrowButtonNeck"></div>
     </div>
     <span id="headerText"></span>
+    <a id="notify" href="#notify" data-nonav="nonav">!</a>
 </div>
