--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -45,6 +45,7 @@
         <div data-cardid="start" title="Deuxdrop" class="card">
           <a href="#peeps">Peeps</a>
           <a href="#compose">Compose</a>
+          <div class="newConversationNotifications" data-childclass="newConversation"></div>
         </div>
         <div data-cardid="peeps" title="Peeps" class="card" data-childclass="personLink">
         </div>
@@ -80,6 +81,12 @@
         <textarea name="text"></textarea>
         <button>Send</button>
       </form>
+
+      <a href="#conversation?id=" data-classimpl="newConversation" class="newConversation">
+        <span class="newConversationPeep" data-bind="from.name"></span>
+        <span class="newConversationText" data-bind="text"></span>
+        <span class="newConversationTime" data-bind="time"></span>
+      </a>
 
       <a data-classimpl="personLink" href="#peep"></a>
 
