--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -24,7 +24,7 @@
         {
           baseUrl: '../deps',
           paths: {
-            'socket.io': '../fakeserver/node_modules/socket.io/support/socket.io-client/socket.io'
+            'socket.io': '../node_modules/socket.io/support/socket.io-client/socket.io'
           }
         },
         ['../firefox/js/main']
