Update to socket.io 0.7, and start the work for tracking seen state. A bit brittle at the moment.

--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -24,7 +24,7 @@
         {
           baseUrl: '../deps',
           paths: {
-            'socket.io': '../node_modules/socket.io/support/socket.io-client/socket.io'
+            'socket.io': '/socket.io/socket.io'
           }
         },
         ['../firefox/js/main']
