Got the popup to work on iOS, iScroll was interfering. Now popup works, but crypto has a timeout on older ios device.

--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -25,7 +25,7 @@
           baseUrl: '../deps',
           paths: {
             'socket.io': '/socket.io/socket.io',
-            'browserId': 'https://browserid.org/include',
+            'browserId': 'https://browserid.org/include'
           }
         },
         ['../firefox/js/main']
@@ -36,9 +36,9 @@
 
     <div id="cardContainer">
       <div id="cards">
-        <div data-cardid="signIn" title="Sign In" class="card">
+        <div data-cardid="signIn" title="Sign In" class="card noiscroll">
           <div class="scroller">
-            <a class="item" data-nonav="nonav" href="#browserIdSignIn"><img src="https://browserid.org/i/sign_in_blue.png" align="absmiddle">Sign In With BrowserID</a>
+            <a class="item browserSignIn" data-nonav="nonav" href="#browserSignIn"><img src="https://browserid.org/i/sign_in_blue.png" align="absmiddle">Sign In With BrowserID</a>
           </div>
         </div>
         <div data-cardid="start" title="Deuxdrop" class="card">
