Small tweaks to match ui mocks more.

--- a/clients/deps/cardsHeader.html
+++ b/clients/deps/cardsHeader.html
@@ -1,7 +1,7 @@
 <div id="header">
     <div id="back">
         <div class="mblArrowButtonHead"></div>
-        <div class="mblArrowButtonBody mblArrowButtonText">Back</div>
+        <div class="mblArrowButtonBody mblArrowButtonText">&#9668; back</div>
         <div class="mblArrowButtonNeck"></div>
     </div>
     <span id="headerText"></span>
