--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -44,9 +44,9 @@
         </div>
         <div data-cardid="start" title="Deuxdrop" class="card noiscroll">
           <div class="scroller">
-            <a class="item block" href="#peeps">People</a>
-            <a class="item block" href="#compose">Compose</a>
-            <a class="item block" data-nonav="nonav" href="#signOut">Sign Out</a>
+            <a class="item block vbox" href="#peeps"><div class="boxFlex"><img class="tileImage" src="i/face2.png"></div><span class="tileName">People</span></a>
+            <a class="item block" href="#compose"><div class="boxFlex"><img class="tileImage" src="i/face2.png"></div><span class="tileName">Compose</span></a>
+            <a class="item block" data-nonav="nonav" href="#signOut"><div class="boxFlex"><img class="tileImage" src="i/face2.png"></div><span class="tileName">Sign Out</span></a>
             <div class="newConversationNotifications" data-childclass="newConversation">
               <div class="newConversationScroller">
               </div>
@@ -90,12 +90,11 @@
     <!-- Start standard UI elements -->
     <div id="common" class="hidden">
 
-      <form data-classimpl="compose" class="compose hbox">
+      <form data-classimpl="compose" class="compose">
         <input type="hidden" name="from" value="">
         <input type="hidden" name="to" value="">
         <input type="hidden" name="convId" value="">
-        <textarea name="text" class="boxFlex"></textarea>
-        <button>Send</button>
+        <textarea name="text"></textarea>
       </form>
 
       <a href="#conversation?id=" data-classimpl="newConversation" class="newConversation">
