get mobile firefox to work with browserid. Checking in local copy of include.js from browserid, but if the change gets pushed to real browserid, remove this local copy.

--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -25,7 +25,8 @@
           baseUrl: '../deps',
           paths: {
             'socket.io': '/socket.io/socket.io',
-            'browserId': 'https://browserid.org/include'
+            'browserId': 'include'
+            //'browserId': 'https://browserid.org/include'
           }
         },
         ['../firefox/js/main']
