Switch to input instead of textarea to avoid a disappearing cursor on iOS with the textarea use.

--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -94,7 +94,7 @@
         <input type="hidden" name="from" value="">
         <input type="hidden" name="to" value="">
         <input type="hidden" name="convId" value="">
-        <textarea name="text"></textarea>
+        <input type="text" name="text">
       </form>
 
       <a href="#conversation?id=" data-classimpl="newConversation" class="newConversation">
