Only allow messaging between people that have added each other to their peep list. Also allow for stronger browserid audience check.

--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -70,6 +70,7 @@
             <div class="peepConversations" data-childclass="convListItem">
             </div>
             <form data-class="compose"></form>
+            <span class="addToChatMessage hidden">This person needs to add you before you can chat with them.</span>
           </div>
         </div>
         <div data-cardid="conversation" title="Conversation" class="card">
@@ -113,8 +114,7 @@
 
       <a data-classimpl="addPersonLink" class="item" href="#listUsersForAddPeep">+ Add Peep</a>
 
-      <a data-classimpl="convListItem" class="item" href="#conversation?id="><span class="meta">
-          </span></a>
+      <a data-classimpl="convListItem" class="item" href="#conversation?id="><span class="meta"></span></a>
 
       <div data-classimpl="message"  class="bubble">
         <a href='#peep?id=' class="sender">
