Convert modeTransport and moda to use postMessage to talk to each other, and create the possibility to branch the code to use addon-specific messaging, in preparation to allowing the code to run in a locally installed jetpack.

--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -29,7 +29,7 @@
             //'browserId': 'https://browserid.org/include'
           }
         },
-        ['../firefox/js/main']
+        ['modaTransport', '../firefox/js/main']
       );
     </script>
   </head>
