--- a/clients/deps/cardsHeader.html
+++ b/clients/deps/cardsHeader.html
@@ -1,9 +1,8 @@
-<div id="header">
-    <div id="back">
-        <div class="mblArrowButtonHead"></div>
-        <div class="mblArrowButtonBody mblArrowButtonText">&#9668; back</div>
-        <div class="mblArrowButtonNeck"></div>
+<div id="header" class="hbox">
+    <button id="back">Back</button>
+    <div class="boxFlex">
+        <h1 id="headerText" class="overflow">Deuxdrop</h1>
     </div>
-    <span id="headerText"></span>
-    <a id="notify" href="#notify" data-nonav="nonav">!</a>
+    <button class="next invisible">Info</button>
 </div>
+<a id="notify" data-nonav="nonav">!</a>
