--- a/clients/firefox/index.html
+++ b/clients/firefox/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Deuxdrop</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="../deps/require.js"></script>
@@ -29,24 +29,30 @@
       <div id="cards">
         <div data-cardid="signIn" title="Sign In" class="card noiscroll">
           <div class="scroller">
-            <a class="item browserSignIn" data-nonav="nonav" href="#browserSignIn"><img src="https://browserid.org/i/sign_in_blue.png" align="absmiddle">Sign In With BrowserID</a>
+            <a class="homeNav browserSignIn" data-nonav="nonav" href="#browserSignIn">Sign In With BrowserID</a>
           </div>
         </div>
         <div data-cardid="start" title="Deuxdrop" class="card noiscroll">
           <div class="scroller">
-            <a class="item block vbox" href="#peeps"><div class="boxFlex"><img class="tileImage" src="i/face2.png"></div><span class="tileName">People</span></a>
-            <!-- a class="item block" href="#compose"><div class="boxFlex"><img class="tileImage" src="i/face2.png"></div><span class="tileName">Compose</span></a -->
-            <a class="item block" href="#notifications"><div class="boxFlex"><img class="tileImage" src="i/face2.png"></div>
-              <span class="tileName notifications">Notifications</span><span class="notificationCount hidden"></span></a>
-            <a class="item block" data-nonav="nonav" href="#signOut"><div class="boxFlex"><img class="tileImage" src="i/face2.png"></div><span class="tileName">Sign Out</span></a>
+            <a class="homeNav" href="#peeps">Private</a>
+            <a class="homeNav" href="#groups">Group</a>
+            <a class="homeNav" href="#notifications">Notifications</a>
+            <a class="homeNav" href="#add">+</a>
             <div class="newConversationNotifications" data-childclass="newConversation">
               <div class="newConversationScroller">
               </div>
             </div>
           </div>
         </div>
-        <div data-cardid="peeps" title="People" class="card">
-          <div class="scroller" data-childclass="personLink">
+        <div data-cardid="peeps" title="Private" class="card conversations">
+          <div class="subHeader hbox">
+            <div class="boxFlex">
+              <input id="search" type="text" placeholder="search people">
+            </div>
+            <button class="search">search</button>
+            <button class="button" data-href="#listUsersForAddPeep">add contact</button>
+          </div>
+          <div class="scroller" data-childclass="peepSummary">
           </div>
         </div>
         <div data-cardid="notifications" title="Notifications" class="card">
@@ -105,14 +111,35 @@
         <span class="newConversationText" data-bind="text"></span>
       </a>
 
+
+      <a class="private unread hbox" data-classimpl="peepSummary" href="#user">
+          <div>
+              <div class="avatar">
+                  <img src="i/face2.png" data-bind="pic" data-attr="src">
+              </div>
+          </div>
+          <div class="msgPreview boxFlex">
+              <div class="msgPreviewHeader hbox">
+                  <span class="author boxFlex overflow" data-bind="name"></span>
+                  <span class="new">(5)</span>
+                  <span class="boxFlexStrong"></span>
+                  <span class="time">5 min</span>
+              </div>
+              <div class="hbox">
+                  <span class="snippet boxFlex overflow">
+                      This is a snippet of text from the latest msg
+                  </span>
+              </div>
+          </div>
+      </a>
+
+
       <a data-classimpl="personLink" class="item" href="#user">
         <img class="peepInfoPic" src="i/face2.png" data-bind="pic" data-attr="src" align="absmiddle">
         <span class="personName" data-bind="name"></span>
       </a>
 
       <a data-classimpl="addPeepLink" data-nonav="nonav" class="item" href="#user?&id="></a>
-
-      <a data-classimpl="addPersonLink" class="item" href="#listUsersForAddPeep">+ Add Peep</a>
 
       <a data-classimpl="convListItem" class="item" href="#conversation?id="><span class="meta"></span></a>
 
