failed trickery; it actually works until the same-compartment assertion
Moving to current firefox trunk which should support us just grabbing
mozIndexedDB directly from chrome now that
https://bugzilla.mozilla.org/show_bug.cgi?id=681024 is fixed.

--- a/clients/addon/data/blanky.html
+++ b/clients/addon/data/blanky.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+  <script>
+    function gimmeDB(dbName) {
+      return mozIndexedDB.open(dbName);
+    }
+  </script>
+</head>
 <body>
 </body>
 </html>
