prepping for the case that poco objects are returned in the api.

--- a/clients/addon/data/addon/index.html
+++ b/clients/addon/data/addon/index.html
@@ -70,7 +70,7 @@
 
       <a data-classimpl="personLink" class="item" href="#user">
         <img class="peepInfoPic" src="i/face2.png" data-bind="pic" data-attr="src" align="absmiddle">
-        <span class="personName" data-bind="name"></span>
+        <span class="personName" data-bind="displayName"></span>
       </a>
 
       <a data-classimpl="addPeepLink" data-nonav="nonav" class="item" href="#user?&id="></a>
