--- a/clients/firefox/clientdaemon.html
+++ b/clients/firefox/clientdaemon.html
@@ -98,7 +98,7 @@ function BOOTSTRAP(callbackWhenLoaded) {
         define: true,
       }
     },
-    ['event-queue', 'rdcommon/rawclient/acctmgr', 'rdcommon/moda/backside],
+    ['event-queue', 'rdcommon/rawclient/acctmgr', 'rdcommon/moda/backside'],
     function(_blahq, $acctmgr, _backside) {
       console.log(":) :) :) client daemon bootstrapped!");
       RAW_CLIENT = $acctmgr.loadAccount();
@@ -111,6 +111,7 @@ function BOOTSTRAP(callbackWhenLoaded) {
 
 var backsides = {};
 function NEWCLIENT(name) {
+  console.log("new client", name, "reported alive");
   var backside = backsides[name] =
     new $backside.ModaBackside(RAW_CLIENT, name, null);
   backside._sendObjFunc = function(data) {
@@ -123,8 +124,11 @@ function CLIENTMSG(name, data) {
 }
 
 function DEADCLIENT(name) {
-  backsides[name].dead();
-  delete backsides[name];
+  console.log("client", name, "reported dead");
+  if (backsides.hasOwnProperty(name)) {
+    backsides[name].dead();
+    delete backsides[name];
+  }
 }
 
 window.onerror = function (err) {
